Prevent font-flickering issue in Safari.
See: http://stackoverflow.com/a/9739021

--- a/app/assets/stylesheets/base/_typography.scss
+++ b/app/assets/stylesheets/base/_typography.scss
@@ -1,5 +1,9 @@
 // Typography!
 
+html {
+  -webkit-font-smoothing: antialiased;
+}
+
 // Defaults
 body {
   color: $base-font-color;
